--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.14.3",
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
+    "@wordpress/eslint-plugin": "^10.0.2",
     "babel-loader": "^8.2.2",
     "file-loader": "^6.2.0",
     "grunt": "^1.4.1",
@@ -16,12 +17,18 @@
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-wp-i18n": "^1.0.3",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-prettier": "3.4.0",
+    "prettier": "2.3.2"
   },
   "scripts": {
     "makepot": "npx grunt makepot",
     "cssmin": "npx grunt cssmin",
     "jsmin": "npx webpack",
+    "webpack:dev": "npx webpack --mode=development --watch",
     "build": "yarn makepot && yarn cssmin && yarn jsmin"
   }
 }
