--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "prettier": "2.3.2"
   },
   "scripts": {
+    "clear:transients": "docker-compose run --rm wp-cli wp wc tool run clear_transients --user=1",
+    "clear:session": "docker-compose run --rm wp-cli wp wc tool run clear_sessions --user=1",
     "makepot": "npx grunt makepot",
     "cssmin": "npx grunt cssmin",
     "jsmin": "npx webpack",
