--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "lintjs": "npx eslint --config ./.eslintrc.json --ext .js assets/js/nets-easy-for-woocommerce.js --fix",
+    "lintphp": "composer run lint-fix",
     "clear:transients": "docker-compose run --rm wp-cli wp wc tool run clear_transients --user=1",
     "clear:session": "docker-compose run --rm wp-cli wp wc tool run clear_sessions --user=1",
     "makepot": "npx grunt makepot",
