--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
   "author": "Krokedil <info@krokedil.se>",
   "license": "GPL-3.0+",
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.14.4",
-    "@wordpress/eslint-plugin": "^10.0.2",
-    "babel-loader": "^8.2.2",
+    "@wordpress/eslint-plugin": "^12.0.0",
+    "babel-loader": "^8.2.4",
+    "eslint": "8.13.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prettier": "4.0.0",
     "file-loader": "^6.2.0",
-    "grunt": "^1.4.1",
+    "grunt": "^1.5.2",
     "grunt-contrib-cssmin": "^4.0.0",
-    "grunt-contrib-uglify": "^5.0.1",
+    "grunt-contrib-uglify": "^5.1.0",
     "grunt-wp-i18n": "^1.0.3",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.9.1",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-prettier": "3.4.0",
-    "prettier": "2.3.2"
+    "prettier": "2.6.2",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
     "lintjs": "npx eslint --config ./.eslintrc.json --ext .js assets/js/nets-easy-for-woocommerce.js --fix",
