--- a/.distignore
+++ b/.distignore
@@ -2,17 +2,20 @@
 /.git
 /.github
 /node_modules
+/vendor
+.babelrc
 .distignore
+.eslintrc.json
 .gitignore
-readme.md
-README.md
-gulpfile.js
+composer.json
+composer.lock
+gruntfile.js
 package.json
 package-lock.json
-docker-compose.phpunit.yml
-docker-compose.yml
-Dockerfile
 readme.dev.txt
-phpcs.ruleset.xml
-phpunit-docker.xml
+readme.md
+README.md
+phpcs.xml.dist
 phpunit.xml
+webpack.config.js
+yarn.lock
