--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
     "phpcompatibility/phpcompatibility-wp": "^2.1",
     "squizlabs/php_codesniffer": "^3.5.4",
-    "wp-coding-standards/wpcs": "^2.2.1"
+    "php-stubs/woocommerce-stubs": "^7.6",
+    "wp-coding-standards/wpcs": "^2.3"
   },
   "scripts": {
     "lint": "./vendor/bin/phpcs --standard=phpcs.xml.dist --colors --encoding=utf-8 -p `git ls-files --others --exclude-standard -c|grep \\.php`",
