--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "squizlabs/php_codesniffer": "^3.5.4",
     "php-stubs/woocommerce-stubs": "^7.6",
     "wp-coding-standards/wpcs": "^3.0.0",
-    "woocommerce/woocommerce-sniffs": "^1.0"
+    "woocommerce/woocommerce-sniffs": "^1.0",
+    "woocommerce/qit-cli": "^0.4.0"
   },
   "scripts": {
     "lint": "./vendor/bin/phpcs --standard=phpcs.xml.dist --colors --encoding=utf-8 -p `git ls-files --others --exclude-standard -c|grep \\.php`",
