Update packages for blocks

--- a/package.json
+++ b/package.json
@@ -5,24 +5,42 @@
   "repository": "git@github.com:krokedil/dibs-easy-one-for-woocommerce.git",
   "author": "Krokedil <info@krokedil.se>",
   "license": "GPL-3.0+",
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.14.4",
+    "@types/react": "^18.2.57",
+    "@types/wordpress__blocks": "^12.5.13",
+    "@woocommerce/dependency-extraction-webpack-plugin": "^2.3.0",
+    "@wordpress/api-fetch": "^6.49.0",
+    "@wordpress/blocks": "^12.29.0",
+    "@wordpress/data": "^9.22.0",
+    "@wordpress/element": "^5.29.0",
     "@wordpress/eslint-plugin": "^12.0.0",
+    "@wordpress/html-entities": "^3.52.0",
+    "@wordpress/scripts": "^27.3.0",
     "babel-loader": "^8.2.4",
+    "css-loader": "^6.10.0",
     "eslint": "8.13.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.0.0",
     "file-loader": "^6.2.0",
+    "glob": "^10.3.10",
     "grunt": "^1.5.2",
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-uglify": "^5.1.0",
     "grunt-wp-i18n": "^1.0.3",
     "prettier": "npm:wp-prettier@^3.0.3",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.10.0"
+    "react": "^18.2.0",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "lintjs": "npx eslint --config ./.eslintrc.json --ext .js assets/js/nets-easy-for-woocommerce.js --fix",
@@ -34,6 +52,9 @@
     "jsmin": "npx webpack",
     "prettier": "npx prettier assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
     "webpack:dev": "npx webpack --mode=development --watch",
-    "build": "yarn makepot && yarn cssmin && yarn prettier && yarn jsmin"
+    "build": "yarn makepot && yarn cssmin && yarn prettier && yarn jsmin",
+    "start:webpack": "wp-scripts start",
+    "dev": "npm run start:webpack",
+    "build:webpack": "npx wp-scripts build"
   }
 }
