--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
     "dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
     "phpcompatibility/phpcompatibility-wp": "^2.1",
     "squizlabs/php_codesniffer": "^3.5.4",
-    "php-stubs/woocommerce-stubs": "^7.6",
+    "php-stubs/woocommerce-stubs": "^8.4",
     "wp-coding-standards/wpcs": "^3.0.0",
     "woocommerce/woocommerce-sniffs": "^1.0",
-    "woocommerce/qit-cli": "^0.4.0"
+    "woocommerce/qit-cli": "^0.4.0",
+    "10up/wp_mock": "^1.0"
   },
   "scripts": {
     "lint": "./vendor/bin/phpcs --standard=phpcs.xml.dist --colors --encoding=utf-8 -p `git ls-files --others --exclude-standard -c|grep \\.php`",
