Change "Nets Easy" to "Nexi Checkout"

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "krokedil/dibs-easy-for-woocommerce",
-  "description": "Nets Easy for WooCommerce",
+  "description": "Nexi Checkout",
   "authors": [
     {
       "name": "Krokedil AB",
