Add needed pnpm updates & build block

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "GPL-3.0+",
   "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.17.9",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
     "@types/react": "^18.2.57",
     "@types/wordpress__blocks": "^12.5.13",
-    "@woocommerce/dependency-extraction-webpack-plugin": "^2.3.0",
+    "@woocommerce/dependency-extraction-webpack-plugin": "^3.0.0",
     "@wordpress/api-fetch": "^6.49.0",
     "@wordpress/blocks": "^12.29.0",
     "@wordpress/data": "^9.22.0",
@@ -20,7 +22,7 @@
     "@wordpress/eslint-plugin": "^12.0.0",
     "@wordpress/html-entities": "^3.52.0",
     "@wordpress/scripts": "^27.3.0",
-    "babel-loader": "^8.2.4",
+    "babel-loader": "^8.4.1",
     "css-loader": "^6.10.0",
     "eslint": "8.13.0",
     "eslint-config-prettier": "^8.0.0",
@@ -38,23 +40,23 @@
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.1"
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   },
   "scripts": {
-    "lintjs": "pnpx eslint --config ./.eslintrc.json --ext .js assets/js/nets-easy-for-woocommerce.js --fix",
+    "lintjs": "npx eslint --config ./.eslintrc.json --ext .js assets/js/nets-easy-for-woocommerce.js --fix",
     "lintphp": "composer run lint-fix",
     "clear:transients": "docker-compose run --rm wp-cli wp wc tool run clear_transients --user=1",
     "clear:session": "docker-compose run --rm wp-cli wp wc tool run clear_sessions --user=1",
-    "makepot": "pnpx grunt makepot",
-    "cssmin": "pnpx grunt cssmin",
-    "jsmin": "pnpx webpack",
-    "prettier": "pnpx prettier assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
-    "webpack:dev": "pnpx webpack --mode=development --watch",
+    "makepot": "npx grunt makepot",
+    "cssmin": "npx grunt cssmin",
+    "jsmin": "npx webpack",
+    "prettier": "npx prettier assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
+    "webpack:dev": "npx webpack --mode=development --watch",
     "build": "pnpm makepot && pnpm cssmin && pnpm prettier && pnpm jsmin",
     "start:webpack": "wp-scripts start",
     "dev": "npm run start:webpack",
-    "build:webpack": "pnpx wp-scripts build"
+    "build:webpack": "npx wp-scripts build"
   }
 }
