--- a/package.json
+++ b/package.json
@@ -43,18 +43,18 @@
     "webpack-dev-server": "^4.15.1"
   },
 "scripts": {
-  "lintjs": "pnpx eslint --config ./.eslintrc.json --ext .js assets/js/nets-easy-for-woocommerce.js --fix",
+  "lintjs": "npx eslint --config ./.eslintrc.json --ext .js assets/js/nets-easy-for-woocommerce.js --fix",
   "lintphp": "composer run lint-fix",
   "clear:transients": "docker-compose run --rm wp-cli wp wc tool run clear_transients --user=1",
   "clear:session": "docker-compose run --rm wp-cli wp wc tool run clear_sessions --user=1",
-  "makepot": "pnpx grunt makepot",
-  "cssmin": "pnpx grunt cssmin",
-  "jsmin": "pnpx webpack",
-  "prettier": "pnpx prettier assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
-  "webpack:dev": "pnpx webpack --mode=development --watch",
+  "makepot": "npx grunt makepot",
+  "cssmin": "npx grunt cssmin",
+  "jsmin": "npx webpack",
+  "prettier": "npx prettier assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
+  "webpack:dev": "npx webpack --mode=development --watch",
   "build": "npm run makepot && npm run cssmin && npm run prettier && npm run jsmin",
   "start:webpack": "wp-scripts start",
   "dev": "npm run start:webpack",
-  "build:webpack": "pnpx wp-scripts build"
+  "build:webpack": "npx wp-scripts build"
 }
 }
