--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,25 @@
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-SyncToy_14829309-94bf-4956-86dd-41b3413f9a7c.dat
+# Editors
+project.xml
+project.properties
+.buildpath
+.project
+.settings*
+.idea
+.vscode
+.eslintcache
+*.sublime-project
+*.sublime-workspace
+.sublimelinterrc
+*.swp
 
-/.wp
 node_modules/
+
+# OS X metadata
+.DS_Store
+
+# Windows junk
+Thumbs.db
+
 # Logs
 logs
 *.log
@@ -14,4 +28,9 @@ yarn-debug.log*
 yarn-error.log*
 
 /vendor/
-composer.lock
+dependencies/*
+!dependencies/.gitkeep
+tmp-*
+
+# Release
+/release/
