--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,6 @@
       "email": "info@krokedil.se"
     }
   ],
-  "require": {
-    "php": ">=7.2"
-  },
   "require-dev": {
     "dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
     "phpcompatibility/phpcompatibility-wp": "^2.1",
@@ -18,7 +15,8 @@
     "wp-coding-standards/wpcs": "^3.0.0",
     "woocommerce/woocommerce-sniffs": "^1.0",
     "woocommerce/qit-cli": "^0.4.0",
-    "10up/wp_mock": "^1.0"
+    "10up/wp_mock": "^1.0",
+    "wpify/scoper": "3.1.3"
   },
   "scripts": {
     "lint": "./vendor/bin/phpcs --standard=phpcs.xml.dist --colors --encoding=utf-8 -p `git ls-files --others --exclude-standard -c|grep \\.php`",
@@ -28,8 +26,24 @@
     ]
   },
   "config": {
+    "platform": {
+      "php": "7.4"
+    },
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "wpify/scoper": true
     }
-  }
+  },
+  "extra": {
+    "wpify-scoper": {
+      "prefix": "KrokedilNexiCheckoutDeps",
+      "folder": "dependencies",
+      "autorun": true,
+      "globals": [
+        "wordpress",
+        "woocommerce"
+      ]
+    }
+  },
+  "minimum-stability": "dev"
 }
