--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "makepot": "npx grunt makepot",
   "cssmin": "npx grunt cssmin",
   "jsmin": "npx webpack",
-  "prettier": "npx prettier assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
+  "prettier": "npx wp-prettier assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
   "webpack:dev": "npx webpack --mode=development --watch",
   "build": "npm run makepot && npm run cssmin && npm run prettier && npm run jsmin",
   "start:webpack": "wp-scripts start",
