--- a/composer.json
+++ b/composer.json
@@ -45,5 +45,10 @@
       ]
     }
   },
+  "autoload": {
+    "psr-4": {
+      "Krokedil\\Nexi\\": "src/"
+    }
+  },
   "minimum-stability": "dev"
 }
