--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,17 @@
     "wpify/scoper": "3.1.3"
   },
   "scripts": {
-    "lint": "./vendor/bin/phpcs --standard=phpcs.xml.dist --colors --encoding=utf-8 -p `git ls-files --others --exclude-standard -c|grep \\.php`",
-    "lint-fix": "./vendor/bin/phpcbf --standard=phpcs.xml.dist --colors --encoding=utf-8 -p `git ls-files --others --exclude-standard -c|grep \\.php`",
-    "install-codestandards": [
-      "Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run"
-    ]
+    "get-changelog": "bash .github/scripts/new-version.sh",
+    "update-version": "bash .github/scripts/new-version.sh update",
+    "create-changelog": "bash .github/scripts/new-changelog.sh",
+    "pre-release-check": [
+      "bash .github/scripts/check-changelog-master.sh",
+      "bash .github/scripts/check-version-and-compat.sh"
+    ],
+    "lint": "vendor/bin/phpcs . --standard=phpcs.xml --extensions=php -q -s",
+    "lint:fix": "vendor/bin/phpcbf . --standard=phpcs.xml --extensions=php -q -s",
+    "lint:changes": "git diff --name-only HEAD~1 | grep '\\.php$' | xargs vendor/bin/phpcs --standard=phpcs.xml --extensions=php -q -s",
+    "lint:fix:changes": "git diff --name-only HEAD~1 | grep '\\.php$' | xargs vendor/bin/phpcbf --standard=phpcs.xml --extensions=php -q -s"
   },
   "config": {
     "platform": {
